# oruter

./: .gitignore  Jenkinsfile  README.md
aliases-scripts/: README.md  down.sh  env.sh  lab_connect.sh  up.sh
ansible/: README.md  requirements.yml
ansible/inventory/: hosts
ansible/inventory/group_vars/: all.yml
ansible/project/: main.yml
ansible/roles/init/meta/: main.yml
ansible/roles/init/tasks/: main.yml  up_privilege_python.yml
ansible/roles/tear/tasks/: down_privilege_script.yml  main.yml
docker/: .env  README.md  docker-compose.yml
router/: README.md  arp_table.py  arp_table_entry.py  logging_config.json  main.py  packet.py  pyproject.toml  router.py  routing_table.py  routing_table.txt  routing_table_entry.py
router/functions_unittests/: params.py  test_arp.py  test_ethernet.py  test_header.py  test_icmp.py  test_ipv4.py  test_packet.py
router/protocols/: arp.py  ethernet.py  icmp.py  ipv4.py
router/protocols/constants/: arp_constants.py  ethernet_constants.py  global_constants.py  header_field.py  icmp_constants.py  ipv4_constants.py
system_tests/: test_connectivity.sh
