[project]
name = "oruter"
version = "1.0.0"
description = "A router implemented in Python used to forward packets between docker containers in different networks, and more!"
readme = "README.md"
authors = [{ name = "Or Balayla", email = "oribalila@gmail.com" }]
requires-python = ">=3.12"

dependencies = [
	"netaddr>=1.3.0",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]

addopts = [
  "-ra",        # show extra test summary (skipped/xfailed/etc.)
  "--strict",   # treat unknown markers as errors
  "--disable-warnings",
]

testpaths = ["functions_unittests"]
pythonpath = ["."]

markers = [
  "slow: marks tests as slow",
  "integration: integration-level tests",
]

[tool.ruff]
target-version = "py311"
fix = true
unsafe-fixes = true
line-length = 100
indent-width = 4

exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  "build",
  "dist",
  "__pycache__",
  "*.pyc",
]

[tool.ruff.lint]
select = [
  "I",      # import sorting
  "E", "W", # pycodestyle basics (indent/whitespace/syntax nit fixes)
  "F",      # pyflakes (undefined names, unused vars, etc.)
  "N",      # naming conventions
  "D",      # docstrings
  "UP",     # modernize syntax (pyupgrade)
  "B",      # bugbear (common gotchas)
  "C4",     # list/dict/set comps best practices
  "SIM",    # simplify code
  "ARG",    # unused function args
  "RUF",    # Ruff-specific improvements
]

ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function get_time_bytes
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in `__init__`
  "D205", # header_field.py summary
  "E501", # Line too long (120 > 100)
  "N806" # to ignore `payload_MTU` lower-case demand
]

# Keep tests practical (fewer docstring/type nags); allow re-exports in __init__.py
[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "ARG001", "ARG002"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

from-first = false
order-by-type = true

length-sort = true
length-sort-straight = true
force-sort-within-sections = false

lines-between-types = 1
lines-after-imports = 2
combine-as-imports = true

known-first-party = ["router"]
known-local-folder = ["protocols"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

